[package]
name = "cassry"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# rustc-args = ["-A", "dead_code"]

[package.metadata.cargo-fmt]
before-build = true

[dependencies]
# tags
serde = { version = "1", features = ["derive", "rc"] }

serde_json = "1"
serde_urlencoded = "0.7"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = [
    "json",
    "gzip",
    "deflate",
    "rustls-tls",
] }

chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
once_cell = "1"
log = "0.4"
log4rs = "1"
futures = "0.3"
hex = "0.4"
rust_decimal = { version = "1", features = ["maths", "rand", "rust-fuzz"] }
regex = "1"
moka = { version = "0.12", features = ["future"] }

jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
ring = "0.17"
argon2 = "0.5"

secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["serde", "zeroize_derive"] }
redis = { version = "0.32", features = ["tokio-comp", "cluster", "connection-manager"] }