[package]
name = "cassry"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# rustc-args = ["-A", "dead_code"]

[package.metadata.cargo-fmt]
before-build = true

[dependencies]
# below are dependencies should be imported each project
serde = { version = "1", features = ["derive", "rc"] }

serde_json = "1"
serde_urlencoded = "0.7"
serde_with = { version = "3", features = ["chrono_0_4", "base64", "hex"] }
derive_more = { version = "2", features = ["full"] }
postcard = { version = "1", features = ["use-std"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = [
    "json",
    "gzip",
    "deflate",
] }

rocksdb = { version = "0.24", features = ["multi-threaded-cf", "serde1", "lz4", "zstd"] }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["maths", "rand", "rust-fuzz"] }
moka = { version = "0.12", features = ["future"] }

jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
ring = "0.17"
argon2 = "0.5"
blake3 = "1.8"
# hmac = "0.12"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["serde", "zeroize_derive"] }

log = "0.4"
log4rs = "1"
futures = "0.3"
hex = "0.4"
base64 = "0.22"
regex = "1"
keyed-lock = { version = "0.2", features = ["async"] }
uuid = { version = "1", features = ["v7", "serde"] }