[package]
name = "cassry"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [build]
# rustc-args = ["-A", "dead_code"]

[package.metadata.cargo-fmt]
before-build = true

[dependencies]
# below are dependencies should be imported each project
serde = { version = "1", features = ["derive", "rc"] }

# preserve_order 피쳐는 nodejs처럼 삽입순으로 json을 사용하게 됨 일반적으로 btree가 빠르지만 bson가 기본적으로 이 피쳐를 사용하여 혼란을 방지하기 위하여 표준화
# 만약 빠른 json을 이용해야한다면 다른 json을 고려해야함
serde_json = {version = "1", features = ["preserve_order"]}
serde_urlencoded = "0.7"
serde_with = { version = "3", features = ["chrono_0_4", "base64", "hex"] }
derive_more = { version = "2", features = ["full"] }
postcard = { version = "1", features = ["use-std"] }

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = [
    "json",
    "gzip",
    "deflate",
] }

rocksdb = { version = "0.24", features = ["multi-threaded-cf", "serde1", "lz4", "zstd"] }

anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["maths", "rand", "rust-fuzz"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

urlencoding = "2"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
ring = "0.17"
argon2 = "0.5"
blake3 = "1.8"
# hmac = "0.12"
secrecy = { version = "0.10", features = ["serde"] }
zeroize = { version = "1", features = ["serde", "zeroize_derive"] }


futures = "0.3"
hex = "0.4"
base64 = "0.22"
regex = "1"
keyed-lock = { version = "0.2", features = ["async"] }
uuid = { version = "1", features = ["v7", "serde"] }
moka = { version = "0.12", features = ["future"] }